[tool.poetry]
name = "stable_diffusion.openvino"
version = "0.1.0"
description = ""
authors = ["Thiago Franco de Moraes <totonixsame@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.9.7,<3.11"
openvino = "2022.2.0"
transformers = "^4.21.2"
diffusers = "^0.2.4"
tqdm = "^4.64.0"
huggingface-hub = "^0.9.1"
scipy = "^1.9.1"
opencv-python = "4.5.2.54"
numpy = "1.23.1"
streamlit = "^1.12.2"
watchdog = "^2.1.9"
ftfy = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
